--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,21 +1,23 @@
 <ion-header>
-    <ion-navbar>
-        <ion-title>
-            Chat of Nature
-        </ion-title>
-    </ion-navbar>
+  <ion-navbar> <ion-title> Chat of Nature </ion-title> </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-    <div class="messages">
-        <div class="msg-sent">
-            <div class="username">Username</div>
-            <div class="content">Message</div>
-        </div>
-        <div class="msg-received">
-            <div class="username">Other username</div>
-            <div class="content">Other message</div>
-        </div>
+  <div class="messages">
+    <div class="msg-sent">
+      <div class="username">Username</div>
+      <div class="content">Message</div>
     </div>
-    <ion-input placeholder="Start typing here..." clearInput></ion-input>
+    <div *ngFor="let message of messages">
+      <div class="msg-received" *ngIf="!message.sent">
+        <div class="username">{{ message.username }}</div>
+        <div class="content">{{ message.message }}</div>
+      </div>
+      <div class="msg-sent" *ngIf="message.sent">
+        <div class="username">{{ message.username }}</div>
+        <div class="content">{{ message.message }}</div>
+      </div>
+    </div>
+  </div>
+  <ion-input placeholder="Start typing here..." clearInput></ion-input>
 </ion-content>
